update .gitignore to exclude datasets

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
 ################################################################################
+#                              Project .gitignore
+################################################################################
+
+# Data sets too large to store in git
+./test/uci_msd/YearPredictionMSD*
+./test/uci_cover/covtype.data*
+
+################################################################################
 #                               Misc .gitignore
 ################################################################################
 
