--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@
 ################################################################################
 
 # Data sets too large to store in git
-./test/uci_msd/YearPredictionMSD.txt*
-./test/uci_cover/covtype.data*
+YearPredictionMSD.txt*
+covtype.data*
 
 ################################################################################
 #                               Misc .gitignore
