--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@ covtype.data*
 # Mac user annoyance
 .DS_Store
 
+# vim
+*.swp
+
 ################################################################################
 #                               C++ .gitignore
 ################################################################################
