fix directory structure and cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,11 +12,11 @@ include_directories(deps/eigen-3.3.4/include/eigen3)
 include_directories(include)
 # set source files
 set(CXX_SOURCES
-    src/sequential/sketches/oblivious_sketch.cpp
-    src/sequential/sketches/adaptive_sketch.cpp
-    src/sequential/sketches/gaussian_sketch.cpp
-    src/sequential/sketches/count_sketch.cpp
-    src/sequential/sketches/leverage_score_sketch.cpp
+    src/cpp/sketches/oblivious_sketch.cpp
+    src/cpp/sketches/adaptive_sketch.cpp
+    src/cpp/sketches/gaussian_sketch.cpp
+    src/cpp/sketches/count_sketch.cpp
+    src/cpp/sketches/leverage_score_sketch.cpp
 )
 set(CUDA_SOURCES
     src/cuda/sketches/oblivious_sketch.cu
@@ -33,5 +33,5 @@ file(COPY test/data DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 add_executable(count_sketch_test test/count_sketch_test ${CXX_SOURCES})
 add_executable(gaussian_sketch_test test/gaussian_sketch_test ${CXX_SOURCES})
 
-cuda_add_executable(count_sketch_test_cuda test/count_sketch_test ${CUDA_SOURCES})
-cuda_add_executable(gaussian_sketch_test_cuda test/gaussian_sketch_test ${CUDA_SOURCES})
+# cuda_add_executable(count_sketch_test_cuda test/count_sketch_test ${CUDA_SOURCES})
+# cuda_add_executable(gaussian_sketch_test_cuda test/gaussian_sketch_test ${CUDA_SOURCES})
