--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,13 +25,17 @@ set(CUDA_SOURCES
     src/cuda/sketches/count_sketch.cu
     src/cuda/sketches/leverage_score_sketch.cu
 )
+# make libraries
+add_library(cpp_sketch ${CXX_SOURCES})
 
 # copy test cases to binary directory
 file(COPY test/data DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
 # compile test code
-add_executable(count_sketch_test test/count_sketch_test ${CXX_SOURCES})
-add_executable(gaussian_sketch_test test/gaussian_sketch_test ${CXX_SOURCES})
+add_executable(count_sketch_test test/count_sketch_test)
+add_executable(gaussian_sketch_test test/gaussian_sketch_test)
+target_link_libraries(count_sketch_test cpp_sketch)
+target_link_libraries(gaussian_sketch_test cpp_sketch)
 
 # cuda_add_executable(count_sketch_test_cuda test/count_sketch_test ${CUDA_SOURCES})
 # cuda_add_executable(gaussian_sketch_test_cuda test/gaussian_sketch_test ${CUDA_SOURCES})
