add compilation for MAD_sketch

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,7 @@ set(CXX_SOURCES
     src/cpp/sketches/gaussian_sketch.cpp
     src/cpp/sketches/count_sketch.cpp
     src/cpp/sketches/leverage_score_sketch.cpp
+    src/cpp/sketches/count_min_sketch.cpp
     src/util.cpp
 )
 # make libraries
@@ -65,6 +66,12 @@ add_executable(test_subspace_embedding
     test/test_subspace_embedding.cpp
     src/util.cpp
 )
+
+# compile mad sketch
+# add_executable(run_mad_sketch
+#     src/cpp/applications/run_MAD_sketch.cpp
+#     src/cpp/applications/MAD_sketch.cpp)
+# target_link_libraries(run_mad_sketch sketch)
 
 # copy test cases to binary directory
 file(COPY test/data DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
